; ModuleID = '/home/carl/AnghaBench/linux/kernel/time/extr_tick-common.c_tick_check_percpu.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/time/extr_tick-common.c_tick_check_percpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clock_event_device = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.clock_event_device*, %struct.clock_event_device*, i32)* @tick_check_percpu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tick_check_percpu(%struct.clock_event_device* %0, %struct.clock_event_device* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.clock_event_device*, align 8
  %6 = alloca %struct.clock_event_device*, align 8
  %7 = alloca i32, align 4
  store %struct.clock_event_device* %0, %struct.clock_event_device** %5, align 8
  store %struct.clock_event_device* %1, %struct.clock_event_device** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.clock_event_device*, %struct.clock_event_device** %6, align 8
  %10 = getelementptr inbounds %struct.clock_event_device, %struct.clock_event_device* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = call i32 @cpumask_test_cpu(i32 %8, i32 %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %49

15:                                               ; preds = %3
  %16 = load %struct.clock_event_device*, %struct.clock_event_device** %6, align 8
  %17 = getelementptr inbounds %struct.clock_event_device, %struct.clock_event_device* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @cpumask_of(i32 %19)
  %21 = call i64 @cpumask_equal(i32 %18, i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %15
  store i32 1, i32* %4, align 4
  br label %49

24:                                               ; preds = %15
  %25 = load %struct.clock_event_device*, %struct.clock_event_device** %6, align 8
  %26 = getelementptr inbounds %struct.clock_event_device, %struct.clock_event_device* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = icmp sge i64 %27, 0
  br i1 %28, label %29, label %36

29:                                               ; preds = %24
  %30 = load %struct.clock_event_device*, %struct.clock_event_device** %6, align 8
  %31 = getelementptr inbounds %struct.clock_event_device, %struct.clock_event_device* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = call i32 @irq_can_set_affinity(i64 %32)
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %36, label %35

35:                                               ; preds = %29
  store i32 0, i32* %4, align 4
  br label %49

36:                                               ; preds = %29, %24
  %37 = load %struct.clock_event_device*, %struct.clock_event_device** %5, align 8
  %38 = icmp ne %struct.clock_event_device* %37, null
  br i1 %38, label %39, label %48

39:                                               ; preds = %36
  %40 = load %struct.clock_event_device*, %struct.clock_event_device** %5, align 8
  %41 = getelementptr inbounds %struct.clock_event_device, %struct.clock_event_device* %40, i32 0, i32 1
  %42 = load i32, i32* %41, align 8
  %43 = load i32, i32* %7, align 4
  %44 = call i32 @cpumask_of(i32 %43)
  %45 = call i64 @cpumask_equal(i32 %42, i32 %44)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %48

47:                                               ; preds = %39
  store i32 0, i32* %4, align 4
  br label %49

48:                                               ; preds = %39, %36
  store i32 1, i32* %4, align 4
  br label %49

49:                                               ; preds = %48, %47, %35, %23, %14
  %50 = load i32, i32* %4, align 4
  ret i32 %50
}

declare dso_local i32 @cpumask_test_cpu(i32, i32) #1

declare dso_local i64 @cpumask_equal(i32, i32) #1

declare dso_local i32 @cpumask_of(i32) #1

declare dso_local i32 @irq_can_set_affinity(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
